--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "dist/**/*"
   ],
   "scripts": {
+    "test": "jest",
+    "coverage": "jest --coverage",
     "build": "tsc",
     "lint": "tslint -p tsconfig.json"
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4",
+    "jest": "^29.5.0",
+    "ts-node": "^10.9.1",
     "tslint": "^6.1.3",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.4"
   }
 }
